# tackler

./: .gitmodules  ALLOWED_SIGNERS  ALLOWED_SIGNERS.asc  CHANGELOG.adoc  CREDITS.adoc  Cargo.toml  NOTICE  README.adoc  deny.toml  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: rel-entry-tmpl.adoc
docs/devel/: audit-repo.adoc  design.adoc  readme.adoc  txn-set-checksum.sh
docs/licenses/: mimalloc.txt  mimalloc_rust-LICENSE.txt  mimalloc_rust.txt
docs/tep/: readme.adoc  tep-0001.adoc  tep-1001.adoc  tep-1007.adoc  tep-1015.adoc  tep-1016.adoc  tep-1017.adoc  tep-1018.adoc
docs/tep/tep-1001/: commodities.adoc
examples/: audit.toml  maple.toml  readme.adoc  simple.toml  solar.toml  tackler.toml
examples/simple/txns/: journal.txn
examples/tackler/conf/: accounts.toml  commodities.toml
examples/tackler/txns/: price.db
perf/: perf-accounts.toml  perf.toml  readme.adoc
reports/: readme.adoc  report-bal.typ
reports/data/: audit.bal.json
suite/: check-tests.sh  readme.adoc
suite/accumulator/ok/: bal-01.ref.equity.txn  bal-02.ref.equity.txn  bal-gap-01.ref.equity.txn  bal-gap-02.ref.equity.txn  bal-gap-03.ref.equity.txn  eq-uuid-01.ref.equity.txn  eq-uuid-01.ref.identity.txn  eq-uuid-01.ref.reg.txt  eq-uuid-02.ref.equity.txn
suite/audit/: acc-selectors.toml  audit-sha3_512.toml  audit.toml  cfg-fs-git-active.toml  cfg-fs-nothing.toml  cfg-git-fs-active.toml  tep1016-01-err.toml  tep1016-01.toml  tep1016-02-err.toml  tep1016-02.toml
suite/audit/ok/: audit-1E1-01.ref.equity.txn  audit-1E1-02.ref.equity.txn  audit-1E2-01.ref.equity.txn  audit-1E2-02.ref.equity.txn  audit-1E2-03.ref.equity.txn  audit-1E2-04.ref.equity.txn  audit-1E2-06-step2.ref.identity.txn  audit-1E2-07.ref.equity.txn  audit-1E2-08.ref.equity.txn  audit-invert-01.ref.equity.txn  audit-invert-02.ref.equity.txn  audit-invert-03.ref.equity.txn  tep1016-01.ref.equity.txn
suite/cli/ok/: console-03.ref.equity.txn
suite/commodity/ok/: basic-01.ref.equity.txn  basic-02.ref.equity.txn  basic-03-02.ref.identity.txn  basic-03-02.ref.reg.txt  basic-03.ref.equity.txn  basic-04.ref.equity.txn  basic-05.ref.equity.txn  basic-06.ref.equity.txn  filter-01.ref.equity.txn  filter-02.ref.equity.txn  filter-03.ref.equity.txn  inverted-01.ref.equity.txn  unknown-01.ref.equity.txn  valpos-01-01.ref.equity.txn  valpos-02.ref.equity.txn  valpos-03.ref.equity.txn
suite/core/: git-dir.toml  git-ok.toml  id2id.toml
suite/core/ok/: git-and-filter-01.ref.equity.txn  git-commit-04.ref.equity.txn  git-shard-01.ref.equity.txn  git-tag-01.ref.equity.txn
suite/extid/: extid-plain.toml  extid-uniq-false.toml  extid-uniq-true.toml
suite/extid/ok/: extid-00.ref.identity.txn  extid.ref.identity.txn  extid.ref.reg.json  extid.ref.reg.txt
suite/parser/ok/: post-comments-01.ref.reg.json  post-comments-01.ref.reg.txt
suite/price/ok/: multi-00.ref.equity.txn  multi-01.ref.equity.txn  multi-02.ref.equity.txn  multi-05.ref.equity.txn  multi-miss-01.ref.equity.txn  multi-miss-vp-04.ref.equity.txn  multi-miss-vp-05.ref.equity.txn  multi-odd-01.ref.equity.txn  multi-vp-03.ref.equity.txn  multi-vp-04.ref.equity.txn  multi.db  price-00.ref.equity.txn  price-01.ref.equity.txn  (+6 more)
tackler-api/: CRATES.md  Cargo.toml
tackler-api/src/: filters.rs  lib.rs  location.rs  metadata.rs  reports.rs  txn_header.rs  txn_ts.rs
tackler-cli/: CRATES.md  Cargo.toml  README.adoc
tackler-cli/src/: cli_args.rs  commands.rs  main.rs
tackler-cli/src/commands/: default.rs  init.rs  new.rs
tackler-cli/src/commands/init/: accounts_toml.rs  commodities_toml.rs  journal_txn.rs  price_db.rs  tackler_toml.rs  tags_toml.rs  welcome_txn.rs
tackler-core/: CRATES.md  Cargo.toml
tackler-core/benches/: parser_bench.rs
tackler-core/src/: config.rs  export.rs  filter.rs  math.rs  parser.rs  report.rs
tackler-core/src/config/: items.rs  overlaps.rs  raw_items.rs
tackler-core/src/export/: accounts_exporter.rs  equity_exporter.rs  identity_exporter.rs
tackler-core/src/filter/: txn.rs
tackler-core/src/filter/logic/: logic_and.rs  logic_or.rs
tackler-core/src/filter/posting/: posting_account.rs  posting_amount_equal.rs  posting_amount_greater.rs  posting_amount_less.rs  posting_comment.rs  posting_commodity.rs
tackler-core/src/filter/txn/: txn_bbox_lat_lon.rs  txn_bbox_lat_lon_alt.rs  txn_code.rs  txn_description.rs  txn_extid.rs  txn_ts_begin.rs  txn_ts_end.rs  txn_uuid.rs
tackler-core/src/kernel/: accumulator.rs  balance.rs  hash.rs  price_lookup.rs  report_item_selector.rs  report_settings.rs  settings.rs
tackler-core/src/math/: format.rs  tackler_real.rs
tackler-core/src/model/: account_tree_node.rs  balance_tree_node.rs  posting.rs  register.rs  transaction.rs  txn_data.rs
tackler-core/src/parser/: error.rs  parts.rs  pricedb_parser.rs  tackler_txns.rs  tests.rs
tackler-core/src/parser/parts/: chars.rs  comment.rs  identifier.rs  posting_value.rs  timestamp.rs  txn_header.rs  txn_header_code.rs  txn_header_desc.rs  txn_meta_extid.rs  txn_meta_location.rs  txn_meta_tags.rs  txn_meta_uuid.rs  txn_metadata.rs  txn_posting.rs  txn_postings.rs  txns.rs
tackler-core/src/parser/tests/: tackler_txns.rs  txn_accounts.rs  txn_commodities.rs  txn_extid.rs  txn_header_code.rs  txn_header_desc.rs  txn_header_timestamp.rs  txn_location.rs  txn_metadata.rs  txn_tags.rs  txn_uuid.rs
tackler-core/src/report/: balance_group_reporter.rs  balance_reporter.rs  register_reporter.rs
tackler-core/tests/: git_txns.rs  txns_checksum.rs  txns_extid.rs
tackler-rs/: CRATES.md  Cargo.toml
tackler-rs/src/: lib.rs  regex.rs
tests/sh/: _noimpl.sh  audit-errors.sh  audit.sh  cli-errors.sh  cli.sh  commodity-errors.sh  commodity.sh  core-fs-errors.sh  core-git-errors.sh  core.sh  extid-errors.sh  extid.sh  gas-blender.sh  location-errors.sh  location.sh  new-and-init.sh  parser.sh  price-multi-miss.sh  price-multi.sh  price-strict.sh  price.sh  reporting-accounts.sh  reporting-errors.sh  reporting-group_by.sh  reporting-ok.sh  reporting-time_zones.sh  tags-errors.sh  tags.sh  tep-1016-errors.sh  tep-1016.sh  test-runner-ng.sh
(+56 files in other folders)
