#
# Tackler-NG 2022-2024
#
# SPDX-License-Identifier: Apache-2.0
#
[workspace]
members = [
  "tackler-rs",
  "tackler-api",
  "tackler-core",
  "tackler-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
homepage = "https://tackler.fi/"
repository = "https://github.com/tackler-ng/tackler"
categories = [ "finance", "parser-implementations" ]
keywords = [ "accounting", "finance" ]
include = [ "src/**/*.rs", "CRATES.md", "README.adoc", "build.rs", "NOTICE" ]
rust-version = "1.85.0"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
rust-2024-compatibility = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unused_lifetimes = "warn"

[profile.release]
lto = true
codegen-units = 1

[profile.test]
# tackler-core tests would be too slow without this
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1

[workspace.dependencies]
base64 = { version = "0.22.1" }
indoc = "2.0.6"
jiff = { version = "0.2.15", features = [ "serde" ]}
rust_decimal = { version = "1.38.0", features= ["serde-with-arbitrary-precision" ]}
rust_decimal_macros = { version = "1.38.0" }
uuid = { version = "1.18.1", default-features = false, features = [ "serde" ] }
log = "0.4.28"
regex =  { version = "1.11.2" }
serde = { version = "1.0.226", default-features = false }
serde_json = { version = "1.0.145" , default-features = false, features = [ "std", "arbitrary_precision" ] }
itertools = "0.14.0"
mimalloc = { version = "0.1.48" }
