#
# Tackler-NG 2022-2025
# SPDX-License-Identifier: Apache-2.0
#
[package]
name = "tackler"
version = "25.6.2-dev"
description = "Fast, reliable bookkeeping tool with native GIT SCM support for plain text accounting"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
include.workspace = true
rust-version.workspace = true
readme = "CRATES.md"

[lints]
workspace = true

[dependencies]
tackler-rs =   { path = "../tackler-rs",   version = "0.10.1" }
tackler-api =  { path = "../tackler-api",  version = "0.11.0" }
tackler-core = { path = "../tackler-core", version = "0.12.0" }
log = { workspace = true }
clap = { version = "4.5.48", features = [ "derive" ] }

mimalloc = { workspace = true }

