#
# Tackler-NG 2022-2025
# SPDX-License-Identifier: Apache-2.0
#
[package]
name = "tackler-core"
version = "0.12.0"
description = "Core components for Tackler accounting engine with native GIT SCM support"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
include.workspace = true
rust-version.workspace = true
readme = "CRATES.md"

[lints]
workspace = true

[lib]
name = "tackler_core"
path = "src/lib.rs"

[dependencies]
tackler-api =  { path = "../tackler-api",  version = "0.11.0" }
tackler-rs =   { path = "../tackler-rs",   version = "0.10.1" }
jiff = { workspace = true }
log = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
sha2 = "0.10.9"
sha3 = "0.10.8"
digest = "0.10.7"

gix = { version = "0.72.1", default-features = false, features = ["max-performance-safe", "revision"] }
toml = "0.8.23"
winnow = "0.7.11"

mimalloc = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
indoc = { workspace = true }
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "parser_bench"
harness = false

