#
# Tackler-NG 2022-2026
# SPDX-License-Identifier: Apache-2.0
#
[package]
name = "tackler-core"
version = "0.16.0"
description = "Core components for Tackler accounting engine with native GIT SCM support"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
include.workspace = true
rust-version.workspace = true
readme = "CRATES.md"

[lints]
workspace = true

[lib]
name = "tackler_core"
path = "src/lib.rs"

[dependencies]
tackler-api =  { path = "../tackler-api",  version = "0.15.0" }
tackler-rs =   { path = "../tackler-rs",   version = "0.12.0" }
jiff = { workspace = true }
log = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
sha2 = "0.11.0"
sha3 = "0.11.0"
digest = "0.11.2"

gix = { version = "0.83.0", default-features = false, features = [ "sha1", "max-performance-safe", "revision" ]} #"auto-chain-error"] }
toml = "1.1.2"
winnow = "1.0.2"

mimalloc = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
indoc = { workspace = true }
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "parser_bench"
harness = false

